[package]
name = "christmas-countdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.1"
futures-util = "0.3.25"
reqwest = { version = "0.11.13", features = ["json"] }
rocket = "0.5.0-rc"
serde = "1.0.151"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.3.1"
